# bachelor-thesis-physics

./: .gitignore  README.md  pyproject.toml  requirements.txt
02_Python_Scripts/: dilepton_output_parsing.py  io_smash.py  output_analysis.py  plotting.py  quality_of_life.py  smash_output_functions.py  smash_read.py
03_Doc_Codedesign/: Dilepton_output_specifics.md  General_design_assumptions.md
03_Shell_Scripts/: build-smash.bash  cleanup_output.sh  copy_smash_data.sh  run_python.sbatch  run_smash_basic.sh  run_smash_multiple.sh
04_Files_for_Virgo/: config.yaml
07_Doc_Codedesign/: Dilepton_output_specifics.md  General_design_assumptions.md
08_Presentations/: SotW_2026_01_23.odp
